@@ -5,6 +5,18 @@ VEGAN STABLE VERSIONS
 
 Version 1.15-2 (opened January 14, 2009)
 
+	* merged r608: plot.radfit gained argument log = "y".
+
+	* merged r538: orditkplot makes TIFF graphics.
+
+	* merged r539, 540: spantree retains names, and plot.spantree uses
+	ordilabel in plots.
+
+	* merged r676: commsimulator results retain names.
+	
+	* merged r518: doubled "the" in man pages of decorana, spantree,
+	decostand, specpool and metaMDS.
+	
 	* merged r750: better example in add1.cca.Rd.
 
 	* merged r735 & r736: stepacross fixes in metaMDSdist with
